mostly fix scroll behavior and spacing

--- a/src/ui/Sections/Sections.styles.css
+++ b/src/ui/Sections/Sections.styles.css
@@ -16,11 +16,11 @@
   display: flex;
   flex-direction: column;
   position: sticky;
-  top: calc(50% - 10vh);
   width: 30%;
   min-width: 300px;
   height: fit-content;
   gap: 20px;
+  padding-top: 20vh;
 }
 
 .sections-nav h2 {
@@ -32,12 +32,11 @@
 .sections-content {
   flex: 1;
   width: 60%;
-  height: calc(100vh - 60px);
+  height: 100vh;
   overflow-y: scroll;
   scroll-snap-type: y proximity;
   scrollbar-width: none;
   scroll-behavior: smooth;
-  margin-top: 30px;
   margin-bottom: 30px;
 }
 
@@ -48,15 +47,16 @@
 .section {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  min-height: calc(100vh - 60px);
+  height: 100vh;
+  min-height: 100vh;
   scroll-snap-align: start;
   scroll-snap-stop: always;
   font-size: 1.5rem;
-  gap: 20px;
-  padding: 30px 0;
+  gap: 30px;
+  padding-top: 20vh;
 }
 
 .section__heading-group {
